--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,7 +4,7 @@ changelog
 Current Release:    raylib 4.5.0 (18 March 2023)
 
 -------------------------------------------------------------------------
-Release:     raylib 5.0 (xx November 2023)
+Release:     raylib 5.0 (xx November 2023) -WIP-
 -------------------------------------------------------------------------
 KEY CHANGES:
  - REDESIGNED: rcore module split per-platform, by @ubkp, @michaelfiber, @Bigfoot71, @raysan5
@@ -19,8 +19,9 @@ Detailed changes:
 [rcore] ADDED: SetWindowTitle() for PLATFORM_WEB (#3222) by @VitusVeit
 [rcore] ADDED: FLAG_WINDOW_RESIZABLE for web (#3305) by @Peter0x44
 [rcore] ADDED: SetWindowMaxSize() for desktop and web (#3309) by @ubkp
+[rcore] ADDED: SetMouseCursor() for PLATFORM_WEB (#3414) by @BeardedBread
 [rcore] REMOVED: PLATFORM_RPI (#3232) by @michaelfiber
-[rcore] REVIEWED: GetFileLength(), added comment #3262 by @raysan5
+[rcore] REVIEWED: GetFileLength(), added comment (#3262) by @raysan5
 [rcore] REVIEWED: Default shaders precission issue on PLATFORM_WEB (#3261) by @branc116
 [rcore] REVIEWED: IsKey*() key validation checks (#3256) by @n77y
 [rcore] REVIEWED: SetClipboardText() for PLATFORM_WEB (#3257) by @ubkp
@@ -37,16 +38,17 @@ Detailed changes:
 [rcore] REVIEWED: Lazy loading of default font used on image drawing (no InitWindow) by @raysan5
 [rcore] REVIEWED: Minor tweaks to raylib events automation system @raysan5
 [rcore] REVIEWED: GetCurrentMonitor() bugfix (#3058) by @hamyyy
-[rcore] REVIEWED: Update CORE.Input.Touch.pointCount #3024 by @raysan5
+[rcore] REVIEWED: Update CORE.Input.Touch.pointCount (#3024) by @raysan5
 [rcore] REVIEWED: Mouse offset and scaling must be considered also on web!
 [rcore] REVIEWED: CompressData(), possible stack overflow
 [rcore] REVIEWED: GetWorldToScreenEx() (#3351) by @Brian-ED
+[rcore] REVIEWED: Fix GetMouseDelta() issue for Android (#3404) by @Bigfoot71
 [rlgl] ADDED: Experimental support for OpenGL ES 3.0 by @raysan5
 [rlgl] ADDED: Support 16-Bit HDR textures (#3220) by @Not-Nik
 [rlgl] REVIEWED: Improved support for ES3/WebGL2 (#3107) by @chemaguerra
 [rlgl] REVIEWED: OpenGL 2.1 half floats support as part of an extension by @Not-Nik
 [rlgl] REVIEWED: Avoid shader attribute not found log by @raysan5
-[rlgl] REVIEWED: Avoid tracelog about not found uniforms #3003 by @raysan5
+[rlgl] REVIEWED: Avoid tracelog about not found uniforms (#3003) by @raysan5
 [rlgl] REVIEWED: rLoadTexture() UBSAN complaints #1891 (#3321) by @Codom
 [rlgl] REVIEWED: glInternalFormat as unsigned int
 [rshapes] ADDED: Spline drawing functions by @raysan5
@@ -62,41 +64,45 @@ Detailed changes:
 [rtextures] ADDED: GenImageLinearGradient() by @danemadsen
 [rtextures] REMOVED: GenImageGradientH() and GenImageGradientV() by @danemadsen
 [rtextures] REVIEWED: LoadImageSvg() by @raysan5
-[rtextures] REVIEWED: Uninitialized thread-locals in stbi #3282 (#3283) by @jbarthelmes
+[rtextures] REVIEWED: Uninitialized thread-locals in stbi (#3282) (#3283) by @jbarthelmes
 [rtextures] REVIEWED: ImageDrawRectangleRec(), validate drawing inside bounds by @JeffM2501
 [rtextures] REVIEWED: LoadTextureCubemap() for manual layouts (#3204) by @Not-Nik
 [rtextures] REVIEWED: Optimization of ImageDrawRectangleRec() (#3185) by @smalltimewizard
 [rtextures] REVIEWED: ImageRotate() formatting by @raysan5
-[rtextures] REVIEWED: GenImagePerlinNoise(), clamp values #3071 by @raysan5
+[rtextures] REVIEWED: GenImagePerlinNoise(), clamp values (#3071) by @raysan5
 [rtextures] REVIEWED: Packing logic error in GenImageFontAtlas() (#2979) by @hanaxar
 [rtextures] REVIEWED: Calculate exact image size in GenImageFontAtlas() (#2963) by @hanaxar
-[rtextures] REVIEWED: ImageDrawRectangleRec() #3027 by @raysan5
+[rtextures] REVIEWED: ImageDrawRectangleRec() (#3027) by @raysan5
 [rtextures] REVIEWED: ImageDraw() source clipping when drawing beyond top left (#3306) by @RobLoach
 [rtextures] REVIEWED: UnloadRenderTexture(), additional checks
 [rtext] ADDED: Font altas white rectangle and flag SUPPORT_FONT_ATLAS_WHITE_REC by @raysan5
 [rtext] ADDED: SetTextLineSpacing() to define line breaks text drawing spacing by @raysan5
 [rtext] RENAMED: LoadFont*() parameter names for consistency and coherence by @raysan5
 [rtext] REVIEWED: GetCodepointCount(), ignore unused return value of GetCodepointNext by @ashn-dot-dev
-[rtext] REVIEWED: TextFormat() warn user if buffer overflow occured. (#3399) by @Murlocohol
-[rtext] REVIEWED: GetGlyphIndex() #3000 by @raysan5
+[rtext] REVIEWED: TextFormat() warn user if buffer overflow occured (#3399) by @Murlocohol
+[rtext] REVIEWED: TextFormat(), added "..." for truncation (#3366) by @raysan5
+[rtext] REVIEWED: GetGlyphIndex() (#3000) by @raysan5
 [rtext] REVIEWED: GetCodepointNext() to return default value on invalid inp…  by @chocolate42
 [rtext] REVIEWED: TextToPascal() issue when first char is uppercase
 [rmodels] ADDED: ModelAnimation.name field, initially with GLTF animation names loaded (… by @alfredbaudisch
 [rmodels] REVIEWED: Support .vox model files version 200 (#3097) by @Bigfoot71
-[rmodels] REVIEWED: Materials loading #3126 @raysan5
+[rmodels] REVIEWED: Materials loading (#3126) @raysan5
 [rmodels] REVIEWED: DrawBillboardPro() to allow source of negative size (#3197) by @bohonghuang
 [rmodels] REVIEWED: glTF loading segfault in animNormals memcpy by @charles-l
 [rmodels] REVIEWED: LoadModelAnimationsGLTF(), free fileData after use (#3065) by @crynux
 [rmodels] REVIEWED: GenMeshCubicmap(), correction of values (#3032) by @Bigfoot71
 [rmodels] REVIEWED: DrawMesh() to avoid UBSAN complaining (#1891)
+[rmodels] REVIEWED: GenMeshPlane() when resX != resZ (#3425) by @neyrox, @s-yablonskiy
 [raudio] ADDED: LoadSoundAlias() by @JeffM2501
-[raudio] ADDED: Missing structure on standalone mode #3160 by @raysan5
+[raudio] ADDED: Missing structure on standalone mode (#3160) by @raysan5
+[raudio] ADDED: GetMasterVolume() (#3434) by @rexim
 [raudio] REVIEWED: Comments about sample format to AttachAudioStreamProcessor() (#3188) by @AlbertoGP
 [raudio] REVIEWED: Documented buffer format for audio processors (#3186) by @AlbertoGP
 [raudio] REVIEWED: ExportWaveAsCode() file saving by @RadsammyT
 [raudio] REVIEWED: Fix warning on discarded const qualifier (#2967) by @RobLoach
 [raudio] REVIEWED: Move mutex initialization before ma_device_start() (#3325) by @Bigfoot71
-[rcamera] REVIEWED: File-macros for consistency #3161 by @raysan5
+[raudio] REVIEWED: Fix UpdateSound() parameter name (#3405) by @KislyjKisel
+[rcamera] REVIEWED: File-macros for consistency (#3161) by @raysan5
 [rcamera] REVIEWED: Support analog stick camera controls (#3066) by @PixelPhobicGames
 [rcamera] REVIEWED: CameraMoveToTarget(), ensure distance is greater than 0 (#3031) by @kolunmi
 [rcamera] REVIEWED: Exposing rcamera functions to the dll (#3355) by @JeffM2501
@@ -159,6 +165,7 @@ Detailed changes:
 [build] REVIEWED: Update webassembly.yml and linux.yml
 [build] REVIEWED: Update zig build system to zig version 0.11.0 (#3393) by @purple4pur
 [build] REVIEWED: Fix for latest zig master (#3037) by @star-tek-mb
+[build] REVIEWED: Examples Makefile to use Makefile.Web when building for web (#3449) by @keithstellyes
 [bindings] ADDED: fortran-raylib
 [bindings] ADDED: raylib-raku to bindings (#3299) by @vushu
 [bindings] ADDED: claw-raylib to BINDINGS.md (#3310) by @bohonghuang
@@ -166,6 +173,7 @@ Detailed changes:
 [bindings] ADDED: TurboRaylib (#3317) by @turborium
 [bindings] ADDED: raylib-ffi to bindings list (#3164) by @ewpratten
 [bindings] ADDED: raylib-pkpy-bindings (#3361) by @blueloveTH
+[bindings] ADDED: Raylib.lean to BINDINGS.md (#3409) by @KislyjKisel
 [bindings] UPDATED: BINDINGS.md (#3217) by @joseph-montanez
 [bindings] UPDATED: BINDINGS.md to include rayjs (#3212) by @mode777
 [bindings] UPDATED: latest h-raylib version (#3166) by @Anut-py
@@ -193,6 +201,7 @@ Detailed changes:
 [external] UPDATED: sdefl and sinfl DEFLATE compression libraries by @raysan5
 [external] UPDATED: miniaudio v0.11.12 --> v0.11.18 by @raysan5
 [external] UPDATED: rl_gputex.h compressed images loading library by @raysan5
+[external] UPDATED: Replaced stb_image_resize.c by stb_image_resize2.h (#3403) by @BabakSamimi
 [external] REVIEWED: msf_gif.h, some warnings
 [misc] ADDED: New task point to issue template about checking the wiki (#3169) by @ubkp
 [misc] REVIEWED: Update FAQ.md by @raysan5
