[Typo fixed]  in CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1871,9 +1871,9 @@ other changes:
 [models] Added function DrawCubeTexture()
 [models] Added function DrawQuad()
 [models] Added function DrawRay()
-[models] Simplified funtion DrawPlane()
+[models] Simplified function DrawPlane()
 [models] Removed function DrawPlaneEx()
-[models] Simplified funtion DrawGizmo()
+[models] Simplified function DrawGizmo()
 [models] Removed function DrawGizmoEx()
 [models] Added function LoadModelEx()
 [models] Review of function LoadCubicMap()
